# ink-mail

./: README.md  flake.nix  meson.build
src/: app.hpp  mailList.cpp  mailPage.cpp  main.cpp  main.ui.xml  utils.cpp
src/icons/: arrowBack_icon.h  clock_icon.h  mail_icon.h  refresh_icon.h
src/service/: getMail.cpp  markAsRead.cpp
src/widgets/: mailItem.cpp
